--- a/deployment/ansible-vitam-extra/roles/grafana/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/grafana/tasks/main.yml
@@ -4,7 +4,7 @@
   loop:
     - grafana_server_enabled.yml
     - plugins.yml
-    - provisionning.yml
+    - provisioning.yml
   when: grafana.enabled == true
 
 - include_tasks: grafana_server_disabled.yml
