--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -184,13 +184,13 @@ grafana:
       - name: "Prometheus"
         type: "prometheus"
         access: "proxy"
-        url: "http://{{ groups['hosts_prometheus']|first }}:19090/prometheus"
+        url: "http://{{ groups['hosts_prometheus']|first }}:{{ prometheus.server.port }}/prometheus"
         basicAuth: "true"
         editable: false
       - name: "Prometheus AlertManager"
         type: "camptocamp-prometheus-alertmanager-datasource"
         access: "proxy"
-        url: "http://{{ groups['hosts_alertmanager']|first }}:19093"
+        url: "http://{{ groups['hosts_alertmanager']|first }}:{{ prometheus.alertmanager.api_port }}"
         basicAuth: "true"
         jsonData:
           keepCookies: "[]"
