--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -178,19 +178,19 @@ prometheus:
 grafana:
     enabled: false
     check_consul: 10 # in seconds
-    host: "{{ groups['grafana']|first }}"
+    host: "{% if groups['grafana']|length > 0 %} {{ groups['grafana']|first }} {% endif %}"
     http_port: 13000
     grafana_datasources:
       - name: "Prometheus"
         type: "prometheus"
         access: "proxy"
-        url: "http://{{ groups['hosts_prometheus']|first }}:{{ prometheus.server.port }}/prometheus"
+        url: "{% if groups['hosts_prometheus']|length > 0 %} http://{{ groups['hosts_prometheus']|first }}:{{ prometheus.server.port }}/prometheus {% endif %}"
         basicAuth: "true"
         editable: false
       - name: "Prometheus AlertManager"
         type: "camptocamp-prometheus-alertmanager-datasource"
         access: "proxy"
-        url: "http://{{ groups['hosts_alertmanager']|first }}:{{ prometheus.alertmanager.api_port }}"
+        url: "{% if groups['hosts_alertmanager']|length > 0 %} http://{{ groups['hosts_alertmanager']|first }}:{{ prometheus.alertmanager.api_port }} {% endif %}"
         basicAuth: "true"
         jsonData:
           keepCookies: "[]"
