Fix when using consul_disabled=true.

--- a/deployment/ansible-vitam/roles/vitam/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/handlers/main.yml
@@ -35,6 +35,7 @@
     name: "vitam-{{ consul_component }}"
     state: reloaded
   listen: reload consul configuration
+  when: consul_disabled is not defined or consul_disabled |lower != "true"
 
 - name: check if service name is resolved
   wait_for:
