--- a/deployment/ansible-vitam/roles/check_ontologies/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/check_ontologies/tasks/main.yml
@@ -30,11 +30,14 @@
     uri:
       method: POST
       body: "{{ lookup('file', '{{ inventory_dir }}/ontology/VitamOntology.json')}}"
-      status_code: 200
+      status_code: 200, 404
       url: "http://{{ hostvars[groups['hosts_functional_administration'][0]]['ip_admin'] }}:{{ vitam.functional_administration.port_admin }}/v1/admin/ontologies/check"
       body_format: "json"
       timeout: "{{ vitam_defaults.services.api_long_call_timeout }}"
-
     run_once: true
+    register: return_code
+
+  - debug:
+      msg: "Check Import Ontologies returnCode={{ return_code.status }}"
 
   when: " 'vitam-functional-administration' in ansible_facts.packages "
