--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -184,21 +184,21 @@ grafana:
       - name: "Prometheus"
         type: "prometheus"
         access: "proxy"
-        url: "{% if groups['hosts_prometheus']|length > 0 %} http://{{ groups['hosts_prometheus']|first }}:{{ prometheus.server.port }}/prometheus {% endif %}"
-        basicAuth: "true"
-        editable: false
+        url: "{% if groups['hosts_prometheus']|length > 0 %}http://{{ groups['hosts_prometheus']|first }}:{{ prometheus.server.port }}/prometheus{% endif %}"
+        basicAuth: false
+        editable: true
       - name: "Prometheus AlertManager"
         type: "camptocamp-prometheus-alertmanager-datasource"
         access: "proxy"
-        url: "{% if groups['hosts_alertmanager']|length > 0 %} http://{{ groups['hosts_alertmanager']|first }}:{{ prometheus.alertmanager.api_port }} {% endif %}"
-        basicAuth: "true"
+        url: "{% if groups['hosts_alertmanager']|length > 0 %}http://{{ groups['hosts_alertmanager']|first }}:{{ prometheus.alertmanager.api_port }}{% endif %}"
+        basicAuth: false
+        editable: true
         jsonData:
           keepCookies: "[]"
           severity_critical: "4"
           severity_high: "3"
           severity_warning: "2"
           severity_info: "1"
-        editable: true
     grafana_dashboards:
       - name: 'vitam-dashboard'
         orgId: 1
