--- a/deployment/ansible-vitam-extra/extra.yml
+++ b/deployment/ansible-vitam-extra/extra.yml
@@ -1,4 +1,5 @@
 ---
+# Doc: http://www.programmevitam.fr/ressources/DocCourante/html/installation/installation/80-extras.html#extras-complet
 
 ### HOSTS NETWORK VARS CHECK ###
 - hosts: hosts
@@ -15,7 +16,6 @@
 - import_playbook: prometheus.yml
 
 - import_playbook: grafana.yml
-
 
 # - hosts: vitam
 #   roles:
