--- a/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
+++ b/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
@@ -41,7 +41,7 @@
 
 - name: Check that the consul directories exist
   file:
-    path: "{{ vitam_defaults.folder.root_path }}/{{ item }}/{{ consul_component }}"
+    path: "{{ vitam_defaults.folder.root_path }}/{{ item }}/consul"
     state: directory
     owner: "{{ vitam_defaults.users.vitam }}"
     group: "{{ vitam_defaults.users.group }}"
