--- a/deployment/ansible-vitam/roles/consul/vars/main.yml
+++ b/deployment/ansible-vitam/roles/consul/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 ## Variables internes au rôle ; à ne pas surcharger par des variables plus globales
-consul_service: "vitam-{{ consul_component }}"
+consul_service: "vitam-consul"
 
-consul_folder_log: "{{ vitam_defaults.folder.root_path | default('/vitam') }}/log/{{ consul_component }}"
-consul_folder_data: "{{ vitam_defaults.folder.root_path | default('/vitam') }}/data/{{ consul_component }}"
+consul_folder_log: "{{ vitam_defaults.folder.root_path | default('/vitam') }}/log/consul"
+consul_folder_data: "{{ vitam_defaults.folder.root_path | default('/vitam') }}/data/consul"
