Story #7707 : Fix threshold checks

--- a/sources/common/common-database-vitam/common-database-public/pom.xml
+++ b/sources/common/common-database-vitam/common-database-public/pom.xml
@@ -58,5 +58,10 @@
 			<artifactId>assertj-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
