--- a/sources/integration-test/src/test/resources/vitam.conf
+++ b/sources/integration-test/src/test/resources/vitam.conf
@@ -7,3 +7,11 @@ classificationLevel :
   allowList :  [Secret Défense, Confidentiel Défense]
   authorizeNotDefined: true
 
+binarySizePlatformThreshold: # 100 Mo
+ limit: 100
+ sizeUnit: MEGABYTE
+binarySizeTenantThreshold: # for tenant 0 max dip/transfer size is 20 Mo, true means can exceed tenant threshold.
+  - tenant: 0
+    limit: 20
+    sizeUnit: MEGABYTE
+    authorize: true
