--- a/sources/metadata/metadata-rest/src/test/resources/metadata.conf
+++ b/sources/metadata/metadata-rest/src/test/resources/metadata.conf
@@ -17,3 +17,7 @@ elasticsearchTenantIndexation:
     objectgroup:
       number_of_shards: 10
       number_of_replicas: 2
+
+dipTimeToLiveInMinutes: 10080 # 7 days
+criticalDipTimeToLiveInMinutes: 1440 # 1 day
+transfersSIPTimeToLiveInMinutes: 10080 # 7 days
