story #8043: Add Avast as available antivirus for Vitam.

--- a/deployment/ansible-vitam/roles/antivirus/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/antivirus/handlers/main.yml
@@ -4,3 +4,8 @@
   service:
     name: "{{ clamav_service_name }}"
     state: restarted
+
+- name: restart avast
+  service:
+    name: avast
+    state: restarted
