--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -249,7 +249,7 @@ vitam:
         baseuri: "ingest-external"
         https_enabled: true
         secret_platform: "false"
-        antivirus: "clamav"
+        antivirus: "clamav" # or avast
         # uncomment if huge files need to be analyzed in more than 60s (default behavior)
         #scantimeout: 60000 # value in milliseconds
         # Directory where files should be placed for local ingest
