fix metadata configuration

--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -33,14 +33,51 @@ elasticsearchNodes:
 - hostName: localhost
   httpPort: 9200
 
+# ElasticSearch tenant indexation
+elasticsearchTenantIndexation:
+  default_config:
+    unit:
+      number_of_shards: 2
+      number_of_replicas: 0
+    objectgroup:
+      number_of_shards: 2
+      number_of_replicas: 0
+  dedicated_tenants:
+    - tenants: '2, 3'
+      unit:
+        number_of_shards: 3
+        number_of_replicas: 1
+      objectgroup:
+        number_of_shards: 3
+        number_of_replicas: 1
+  grouped_tenants:
+    - name: 'grp1'
+      tenants: '5-10'
+      unit:
+        number_of_shards: 1
+        number_of_replicas: 1
+      objectgroup:
+        number_of_shards: 1
+        number_of_replicas: 1
+
 elasticsearchExternalMetadataMappings:
 - collection: Unit
-  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+  mappingFile: ../../../deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
 - collection: ObjectGroup
-  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/og-es-mapping.json
-
+  mappingFile: ../../../deployment/ansible-vitam/roles/elasticsearch-mapping/files/og-es-mapping.json
 
 #Basic Authentication
 adminBasicAuth:
 - userName: adminUser
   password: adminPassword
+
+isDataConsistencyAuditRunnable: true
+dataConsistencyAuditOplogMaxSize: 100
+mongodShardsConf:
+ dbUserName: vitamdb-localadmin
+ dbPassword: qwerty
+ mongoDbShards:
+   - shardName: shard0
+     mongoDbNodes:
+       - dbHost: 172.17.0.2
+         dbPort: 27019
