--- a/deployment/ansible-vitam-extra/roles/grafana/defaults/main.yml
+++ b/deployment/ansible-vitam-extra/roles/grafana/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 
-grafana_group: "grafana"
+grafana_user: grafana
+grafana_group: grafana
 grafana_path_provisioning: "/etc/grafana/provisioning"
 grafana_data_dir: "/var/lib/grafana"
