Remove useless grafana.enabled parameter.
If there is no hosts defined in [hosts_grafana], grafana won't be deployed.

--- a/deployment/ansible-vitam-extra/grafana.yml
+++ b/deployment/ansible-vitam-extra/grafana.yml
@@ -3,5 +3,4 @@
 - hosts: grafana
   roles:
     - role: grafana
-      tags: [tag_grafana, update_prometheus_configuration]
-      when: grafana.enabled == true
+      tags: [grafana, update_prometheus_configuration]
