Uniformize group [hosts_grafana] instead of [grafana] in inventory file.

--- a/deployment/ansible-vitam-extra/grafana.yml
+++ b/deployment/ansible-vitam-extra/grafana.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: grafana
+- hosts: hosts_grafana
   roles:
     - role: grafana
       tags: [grafana, update_prometheus_configuration]
