--- a/deployment/ansible-vitam-extra/metricbeat.yml
+++ b/deployment/ansible-vitam-extra/metricbeat.yml
@@ -1,6 +1,5 @@
 ---
 
 - hosts: vitam
-  any_errors_fatal: true
   roles:
-    - {role: metricbeat, when: "{{groups['hosts_elasticsearch_log'] | length > 0}}" }
+    - { role: metricbeat, when: "groups['hosts_elasticsearch_log'] | length > 0 and metricbeat.enabled | default(false) | bool == true" }
